2009-01-04 Borut Razem <borut.razem AT siol.net>

	* .version, doc/sdccman.lyx: bumped sdcc version to 2.8.6
	  due changes in sdcc asxxxx linkers - it sholud be done 2 days ago :(
	* doc/README.txt: updated John Hartman's e-mail address

2009-01-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Implemented RFE #2484693.
	* src/z80/peeph-z80.def:
	  Some peephole improvements.

2009-01-03 Borut Razem <borut.razem AT siol.net>

	* as/link/lklibr.c:
	  fixed warning: 'ret' may be used uninitialized in this function

2009-01-02 Borut Razem <borut.razem AT siol.net>

	* as/link/lklib.c, as/link/lksdcclib.c, as/link/lklibr.h,
	  as/link/getline.[ch], as/link/lkrel.[ch]: added,
	  made support for differnet library formats more flexible,
	  preparation for support of ar format
	* as/link/lklibr.c, as/link/z80/Makefile.in,
	  as/link/z80/linkgbz80.dsp, as/link/z80/linkz80.dsp,
	  as/link/hc08/link_hc08.dsp, as/link/hc08/Makefile.in,
	  as/link/mcs51/aslink.dsp, as/link/mcs51/Makefile.in,
	  as/link/hc08/lkelf.c, as/link/aslink.h:
	  made support for differnet library formats more flexible,
	  preparation for support of ar format

2009-01-01 Borut Razem <borut.razem AT siol.net>

	* as/link/asxxxx_config.h.in:
	  fixed warning: extra tokens at end of #endif directive
	* src/z80/peep.c:
	  fixed warning: suggest parentheses around && within ||
	* device/lib/Makefile.in: allow whitespaces at the end of lines in
	  ports.build, in order to make it work on cygwin - it seems to be a
	  bug in cygwin grep: CR is not treated as part of end-of-line

2008-12-31 Borut Razem <borut.razem AT siol.net>

	* configure, configure.in, config.dsp, config_vc.awk,
	  as/link/asxxxx_config.h.in, as/link/hc08/lkelf.c, as/link/aslink.h,
	  as/link/hc08/Makefile.in, as/link/mcs51/Makefile.in:
	  introduced asxxxx_config.h.in

2008-12-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peeph-z80.def:
	  Minor addition improvement.
